falcon/generated/src/org/apache/flex/compiler/internal/css/CSSParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g 2012-10-02 17:55:21

/*
 *
 *  Licensed to the Apache Software Foundation (ASF) under one or more
 *  contributor license agreements.  See the NOTICE file distributed with
 *  this work for additional information regarding copyright ownership.
 *  The ASF licenses this file to You under the Apache License, Version 2.0
 *  (the "License"); you may not use this file except in compliance with
 *  the License.  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *
 */

package org.apache.flex.compiler.internal.css;

import java.util.Map;
import java.util.HashMap;
import org.apache.flex.compiler.problems.CSSParserProblem;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/**
 * This is a grammar for advanced CSS in Flex. It parses the CSS document and
 * generate DOM objects.
 */
@SuppressWarnings("unused")
public class CSSParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "I_RULES", "I_MEDIUM_CONDITIONS", "I_DECL", "I_RULE", "I_SELECTOR_GROUP", "I_SELECTOR", "I_SIMPLE_SELECTOR", "I_ARRAY", "AT_NAMESPACE", "ID", "STRING", "SEMI_COLONS", "AT_MEDIA", "BLOCK_OPEN", "BLOCK_END", "ARGUMENTS", "AT_FONT_FACE", "COMMA", "DOT", "HASH_WORD", "COLON", "PIPE", "STAR", "NUMBER_WITH_UNIT", "CLASS_REFERENCE", "PROPERTY_REFERENCE", "EMBED", "URL", "LOCAL", "PERCENT", "EQUALS", "NULL", "LETTER", "DIGIT", "NUMBER", "COMMENT", "WS", "STRING_QUOTE", "'and'"
    };
    public static final int EOF=-1;
    public static final int T__42=42;
    public static final int I_RULES=4;
    public static final int I_MEDIUM_CONDITIONS=5;
    public static final int I_DECL=6;
    public static final int I_RULE=7;
    public static final int I_SELECTOR_GROUP=8;
    public static final int I_SELECTOR=9;
    public static final int I_SIMPLE_SELECTOR=10;
    public static final int I_ARRAY=11;
    public static final int AT_NAMESPACE=12;
    public static final int ID=13;
    public static final int STRING=14;
    public static final int SEMI_COLONS=15;
    public static final int AT_MEDIA=16;
    public static final int BLOCK_OPEN=17;
    public static final int BLOCK_END=18;
    public static final int ARGUMENTS=19;
    public static final int AT_FONT_FACE=20;
    public static final int COMMA=21;
    public static final int DOT=22;
    public static final int HASH_WORD=23;
    public static final int COLON=24;
    public static final int PIPE=25;
    public static final int STAR=26;
    public static final int NUMBER_WITH_UNIT=27;
    public static final int CLASS_REFERENCE=28;
    public static final int PROPERTY_REFERENCE=29;
    public static final int EMBED=30;
    public static final int URL=31;
    public static final int LOCAL=32;
    public static final int PERCENT=33;
    public static final int EQUALS=34;
    public static final int NULL=35;
    public static final int LETTER=36;
    public static final int DIGIT=37;
    public static final int NUMBER=38;
    public static final int COMMENT=39;
    public static final int WS=40;
    public static final int STRING_QUOTE=41;

    // delegates
    // delegators


        public CSSParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CSSParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CSSParser.tokenNames; }
    public String getGrammarFileName() { return "C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g"; }



    /**
     * Parser problems.
     */
    protected List<CSSParserProblem> problems = new ArrayList<CSSParserProblem>();

    /**
     * Collect parser problems.
     */
    @Override
    public void displayRecognitionError(String[] tokenNames, RecognitionException e)
    {
        problems.add(CSSParserProblem.create(this, tokenNames, e));
    }

    /**
     * Check if the cursor is at the end of a simple selector.
     */
    private final boolean endOfSimpleSelector()
    {
        final CommonToken nextToken = (CommonToken) getTokenStream().LT(1);
        if (nextToken == null)
            return true;
        
        // Check if there's white space between the previous token and the next token.
        final CommonToken lastToken = (CommonToken) getTokenStream().LT(-1);
        if (lastToken != null && nextToken != null)
        {
            final int lastStop = lastToken.getStopIndex();
            final int nextStart = nextToken.getStartIndex();
            if (lastStop + 1 < nextStart)
            {
                return true;
            }
        }
        
        // If the next token is "{" or ",", it's also end of a selector.
        final int nextType = nextToken.getType();
        if (nextType == BLOCK_OPEN || nextType == COMMA)
        {
            return true;
        }
        
        return false;
    }



    public static class stylesheet_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stylesheet"
    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:142:1: stylesheet : ( namespaceStatement | fontFace | mediaQuery | ruleset )* ;
    public final CSSParser.stylesheet_return stylesheet() throws RecognitionException {
        CSSParser.stylesheet_return retval = new CSSParser.stylesheet_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        CSSParser.namespaceStatement_return namespaceStatement1 = null;

        CSSParser.fontFace_return fontFace2 = null;

        CSSParser.mediaQuery_return mediaQuery3 = null;

        CSSParser.ruleset_return ruleset4 = null;



        try {
            // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:146:5: ( ( namespaceStatement | fontFace | mediaQuery | ruleset )* )
            // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:146:9: ( namespaceStatement | fontFace | mediaQuery | ruleset )*
            {
            root_0 = (Object)adaptor.nil();

            // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:146:9: ( namespaceStatement | fontFace | mediaQuery | ruleset )*
            loop1:
            do {
                int alt1=5;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:146:11: namespaceStatement
            	    {
            	    pushFollow(FOLLOW_namespaceStatement_in_stylesheet137);
            	    namespaceStatement1=namespaceStatement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, namespaceStatement1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:146:32: fontFace
            	    {
            	    pushFollow(FOLLOW_fontFace_in_stylesheet141);
            	    fontFace2=fontFace();

            	    state._fsp--;

            	    adaptor.addChild(root_0, fontFace2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:146:43: mediaQuery
            	    {
            	    pushFollow(FOLLOW_mediaQuery_in_stylesheet145);
            	    mediaQuery3=mediaQuery();

            	    state._fsp--;

            	    adaptor.addChild(root_0, mediaQuery3.getTree());

            	    }
            	    break;
            	case 4 :
            	    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:146:56: ruleset
            	    {
            	    pushFollow(FOLLOW_ruleset_in_stylesheet149);
            	    ruleset4=ruleset();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ruleset4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stylesheet"

    public static class namespaceStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "namespaceStatement"
    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:149:1: namespaceStatement : AT_NAMESPACE ( ID )? STRING SEMI_COLONS -> ^( AT_NAMESPACE ( ID )? STRING ) ;
    public final CSSParser.namespaceStatement_return namespaceStatement() throws RecognitionException {
        CSSParser.namespaceStatement_return retval = new CSSParser.namespaceStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AT_NAMESPACE5=null;
        Token ID6=null;
        Token STRING7=null;
        Token SEMI_COLONS8=null;

        Object AT_NAMESPACE5_tree=null;
        Object ID6_tree=null;
        Object STRING7_tree=null;
        Object SEMI_COLONS8_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_AT_NAMESPACE=new RewriteRuleTokenStream(adaptor,"token AT_NAMESPACE");
        RewriteRuleTokenStream stream_SEMI_COLONS=new RewriteRuleTokenStream(adaptor,"token SEMI_COLONS");
        RewriteRuleTokenStream stream_STRING=new RewriteRuleTokenStream(adaptor,"token STRING");

        try {
            // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:159:5: ( AT_NAMESPACE ( ID )? STRING SEMI_COLONS -> ^( AT_NAMESPACE ( ID )? STRING ) )
            // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:159:9: AT_NAMESPACE ( ID )? STRING SEMI_COLONS
            {
            AT_NAMESPACE5=(Token)match(input,AT_NAMESPACE,FOLLOW_AT_NAMESPACE_in_namespaceStatement173);  
            stream_AT_NAMESPACE.add(AT_NAMESPACE5);

            // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:159:22: ( ID )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:159:22: ID
                    {
                    ID6=(Token)match(input,ID,FOLLOW_ID_in_namespaceStatement175);  
                    stream_ID.add(ID6);


                    }
                    break;

            }

            STRING7=(Token)match(input,STRING,FOLLOW_STRING_in_namespaceStatement178);  
            stream_STRING.add(STRING7);

            SEMI_COLONS8=(Token)match(input,SEMI_COLONS,FOLLOW_SEMI_COLONS_in_namespaceStatement180);  
            stream_SEMI_COLONS.add(SEMI_COLONS8);



            // AST REWRITE
            // elements: STRING, ID, AT_NAMESPACE
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 160:6: -> ^( AT_NAMESPACE ( ID )? STRING )
            {
                // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:160:9: ^( AT_NAMESPACE ( ID )? STRING )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_AT_NAMESPACE.nextNode(), root_1);

                // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:160:24: ( ID )?
                if ( stream_ID.hasNext() ) {
                    adaptor.addChild(root_1, stream_ID.nextNode());

                }
                stream_ID.reset();
                adaptor.addChild(root_1, stream_STRING.nextNode());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "namespaceStatement"

    public static class mediaQuery_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "mediaQuery"
    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:163:1: mediaQuery : AT_MEDIA medium BLOCK_OPEN ( ruleset )* BLOCK_END -> ^( AT_MEDIA medium ( ruleset )* ) ;
    public final CSSParser.mediaQuery_return mediaQuery() throws RecognitionException {
        CSSParser.mediaQuery_return retval = new CSSParser.mediaQuery_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AT_MEDIA9=null;
        Token BLOCK_OPEN11=null;
        Token BLOCK_END13=null;
        CSSParser.medium_return medium10 = null;

        CSSParser.ruleset_return ruleset12 = null;


        Object AT_MEDIA9_tree=null;
        Object BLOCK_OPEN11_tree=null;
        Object BLOCK_END13_tree=null;
        RewriteRuleTokenStream stream_BLOCK_OPEN=new RewriteRuleTokenStream(adaptor,"token BLOCK_OPEN");
        RewriteRuleTokenStream stream_AT_MEDIA=new RewriteRuleTokenStream(adaptor,"token AT_MEDIA");
        RewriteRuleTokenStream stream_BLOCK_END=new RewriteRuleTokenStream(adaptor,"token BLOCK_END");
        RewriteRuleSubtreeStream stream_ruleset=new RewriteRuleSubtreeStream(adaptor,"rule ruleset");
        RewriteRuleSubtreeStream stream_medium=new RewriteRuleSubtreeStream(adaptor,"rule medium");
        try {
            // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:172:5: ( AT_MEDIA medium BLOCK_OPEN ( ruleset )* BLOCK_END -> ^( AT_MEDIA medium ( ruleset )* ) )
            // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:172:9: AT_MEDIA medium BLOCK_OPEN ( ruleset )* BLOCK_END
            {
            AT_MEDIA9=(Token)match(input,AT_MEDIA,FOLLOW_AT_MEDIA_in_mediaQuery223);  
            stream_AT_MEDIA.add(AT_MEDIA9);

            pushFollow(FOLLOW_medium_in_mediaQuery225);
            medium10=medium();

            state._fsp--;

            stream_medium.add(medium10.getTree());
            BLOCK_OPEN11=(Token)match(input,BLOCK_OPEN,FOLLOW_BLOCK_OPEN_in_mediaQuery227);  
            stream_BLOCK_OPEN.add(BLOCK_OPEN11);

            // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:172:36: ( ruleset )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ID||(LA3_0>=DOT && LA3_0<=COLON)||LA3_0==STAR) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:172:36: ruleset
            	    {
            	    pushFollow(FOLLOW_ruleset_in_mediaQuery229);
            	    ruleset12=ruleset();

            	    state._fsp--;

            	    stream_ruleset.add(ruleset12.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            BLOCK_END13=(Token)match(input,BLOCK_END,FOLLOW_BLOCK_END_in_mediaQuery232);  
            stream_BLOCK_END.add(BLOCK_END13);



            // AST REWRITE
            // elements: AT_MEDIA, medium, ruleset
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 173:6: -> ^( AT_MEDIA medium ( ruleset )* )
            {
                // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:173:9: ^( AT_MEDIA medium ( ruleset )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_AT_MEDIA.nextNode(), root_1);

                adaptor.addChild(root_1, stream_medium.nextTree());
                // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:173:27: ( ruleset )*
                while ( stream_ruleset.hasNext() ) {
                    adaptor.addChild(root_1, stream_ruleset.nextTree());

                }
                stream_ruleset.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "mediaQuery"

    public static class medium_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "medium"
    // C:/CodeOrchestra/falcon_compiler/compiler/src/org/apache/flex/compiler/internal/css/CSS.g:176:1: medium : mediumCondition ( 'and' mediumCondition )* -> ^( I_MEDIUM_CONDITIONS ( mediumCondition )* ) ;
    public final CSSParser.medium_return medium() throws RecognitionException {
        CSSParser.medium_return retval = new CSSParser.medium_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal15=null;
        CSSParser.mediumCondition_return mediumCondition14 = null;

        CSSParser.mediumCondition_return mediumCondition16 = null;

